2010-09-15  Julien Chaffraix  <jchaffraix@codeaurora.org>

        Unreviewed.

        Reverting my changes as it is breaking several tests on Gtk and Qt.

        * platform/mac/Skipped:
        * platform/qt/Skipped:

2010-09-15  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Adam Barth.

        Fix regression from bug 32230. The test needed to be updated to reflect the zoom adjusted font-size.
        https://bugs.webkit.org/show_bug.cgi?id=45841

        * editing/pasteboard/page-zoom.html:

2010-09-15  Julien Chaffraix  <jchaffraix@codeaurora.org>

        Reviewed by Andreas Kling.

        Test for: Parse system colors in the HTML5 canvas context.
        https://bugs.webkit.org/show_bug.cgi?id=39168

        This tests that svg color, deprecated system color and different
        type of colors and invalid inputs are still parsed as such.

        * fast/css/test-setting-canvas-color-expected.txt: Added.
        * fast/css/test-setting-canvas-color.html: Added.
        * platform/mac/Skipped:
        * platform/qt/Skipped:

2010-09-14  Erik Arvidsson  <arv@chromium.org>

        Reviewed by Darin Adler.

        getComputedStyle() returns different values for different zoom levels
        https://bugs.webkit.org/show_bug.cgi?id=32230

        * fast/css/getComputedStyle/computed-style-with-zoom-expected.txt: Added.
        * fast/css/getComputedStyle/computed-style-with-zoom.html: Added.
        * fast/css/getComputedStyle/script-tests/computed-style-with-zoom.js: Added.
        (testProperty):
        (testPropertyValue):

2010-09-15  Chris Fleizach  <cfleizach@apple.com>

        AX: when text is auto-truncated, accessibility bounds are wrong
        https://bugs.webkit.org/show_bug.cgi?id=45793

        Adding ellipsis-text.html to the skip list for GTK until the reason for its failure
        is determined.

        * platform/gtk/Skipped:

2010-09-15  Tony Chang  <tony@chromium.org>
