@@ -1,221 +1,0 @@
-Test case for bug 39168. This tests the CSS color parsing code using <canvas>.
-
-On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
-
-
-PASS Setting color to ActiveBorder was successfully set.
-PASS Setting color to activeborder was successfully set.
-PASS Setting color to ActiveCaption was successfully set.
-PASS Setting color to activecaption was successfully set.
-PASS Setting color to AppWorkspace was successfully set.
-PASS Setting color to appworkspace was successfully set.
-PASS Setting color to Background was successfully set.
-PASS Setting color to background was successfully set.
-PASS Setting color to ButtonFace was successfully set.
-PASS Setting color to buttonface was successfully set.
-PASS Setting color to ButtonHighlight was successfully set.
-PASS Setting color to buttonhighlight was successfully set.
-PASS Setting color to ButtonShadow was successfully set.
-PASS Setting color to buttonshadow was successfully set.
-PASS Setting color to ButtonText was successfully set.
-PASS Setting color to buttontext was successfully set.
-PASS Setting color to CaptionText was successfully set.
-PASS Setting color to captiontext was successfully set.
-PASS Setting color to GrayText was successfully set.
-PASS Setting color to graytext was successfully set.
-PASS Setting color to Highlight was successfully set.
-PASS Setting color to highlight was successfully set.
-PASS Setting color to HighlightText was successfully set.
-PASS Setting color to highlighttext was successfully set.
-PASS Setting color to InactiveBorder was successfully set.
-PASS Setting color to inactiveborder was successfully set.
-PASS Setting color to InactiveCaption was successfully set.
-PASS Setting color to inactivecaption was successfully set.
-PASS Setting color to InactiveCaptionText was successfully set.
-PASS Setting color to inactivecaptiontext was successfully set.
-PASS Setting color to InfoBackground was successfully set.
-PASS Setting color to infobackground was successfully set.
-PASS Setting color to InfoText was successfully set.
-PASS Setting color to infotext was successfully set.
-PASS Setting color to Menu was successfully set.
-PASS Setting color to menu was successfully set.
-PASS Setting color to MenuText was successfully set.
-PASS Setting color to menutext was successfully set.
-PASS Setting color to Scrollbar was successfully set.
-PASS Setting color to scrollbar was successfully set.
-PASS Setting color to ThreeDDarkShadow was successfully set.
-PASS Setting color to threeddarkshadow was successfully set.
-PASS Setting color to ThreeDFace was successfully set.
-PASS Setting color to threedface was successfully set.
-PASS Setting color to ThreeDHighlight was successfully set.
-PASS Setting color to threedhighlight was successfully set.
-PASS Setting color to ThreeDLightShadow was successfully set.
-PASS Setting color to threedlightshadow was successfully set.
-PASS Setting color to ThreeDShadow was successfully set.
-PASS Setting color to threedshadow was successfully set.
-PASS Setting color to Window was successfully set.
-PASS Setting color to window was successfully set.
-PASS Setting color to WindowFrame was successfully set.
-PASS Setting color to windowframe was successfully set.
-PASS Setting color to WindowText was successfully set.
-PASS Setting color to windowtext was successfully set.
-PASS Setting color to aliceblue was successfully set.
-PASS Setting color to antiquewhite was successfully set.
-PASS Setting color to aqua was successfully set.
-PASS Setting color to aquamarine was successfully set.
-PASS Setting color to azure was successfully set.
-PASS Setting color to beige was successfully set.
-PASS Setting color to bisque was successfully set.
-PASS Setting color to black was successfully set.
-PASS Setting color to blanchedalmond was successfully set.
-PASS Setting color to blue was successfully set.
-PASS Setting color to blueviolet was successfully set.
-PASS Setting color to brown was successfully set.
-PASS Setting color to burlywood was successfully set.
-PASS Setting color to cadetblue was successfully set.
-PASS Setting color to chartreuse was successfully set.
-PASS Setting color to chocolate was successfully set.
-PASS Setting color to coral was successfully set.
-PASS Setting color to cornflowerblue was successfully set.
-PASS Setting color to cornsilk was successfully set.
-PASS Setting color to crimson was successfully set.
-PASS Setting color to cyan was successfully set.
-PASS Setting color to darkblue was successfully set.
-PASS Setting color to darkcyan was successfully set.
-PASS Setting color to darkgoldenrod was successfully set.
-PASS Setting color to darkgray was successfully set.
-PASS Setting color to darkgreen was successfully set.
-PASS Setting color to darkgrey was successfully set.
-PASS Setting color to darkkhaki was successfully set.
-PASS Setting color to darkmagenta was successfully set.
-PASS Setting color to darkolivegreen was successfully set.
-PASS Setting color to darkorange was successfully set.
-PASS Setting color to darkorchid was successfully set.
-PASS Setting color to darkred was successfully set.
-PASS Setting color to darksalmon was successfully set.
-PASS Setting color to darkseagreen was successfully set.
-PASS Setting color to darkslateblue was successfully set.
-PASS Setting color to darkslategray was successfully set.
-PASS Setting color to darkslategrey was successfully set.
-PASS Setting color to darkturquoise was successfully set.
-PASS Setting color to darkviolet was successfully set.
-PASS Setting color to deeppink was successfully set.
-PASS Setting color to deepskyblue was successfully set.
-PASS Setting color to dimgray was successfully set.
-PASS Setting color to dimgrey was successfully set.
-PASS Setting color to dodgerblue was successfully set.
-PASS Setting color to firebrick was successfully set.
-PASS Setting color to floralwhite was successfully set.
-PASS Setting color to forestgreen was successfully set.
-PASS Setting color to fuchsia was successfully set.
-PASS Setting color to gainsboro was successfully set.
-PASS Setting color to ghostwhite was successfully set.
-PASS Setting color to gold was successfully set.
-PASS Setting color to goldenrod was successfully set.
-PASS Setting color to gray was successfully set.
-PASS Setting color to green was successfully set.
-PASS Setting color to greenyellow was successfully set.
-PASS Setting color to grey was successfully set.
-PASS Setting color to honeydew was successfully set.
-PASS Setting color to hotpink was successfully set.
-PASS Setting color to indianred was successfully set.
-PASS Setting color to indigo was successfully set.
-PASS Setting color to ivory was successfully set.
-PASS Setting color to khaki was successfully set.
-PASS Setting color to lavender was successfully set.
-PASS Setting color to lavenderblush was successfully set.
-PASS Setting color to lawngreen was successfully set.
-PASS Setting color to lemonchiffon was successfully set.
-PASS Setting color to lightblue was successfully set.
-PASS Setting color to lightcoral was successfully set.
-PASS Setting color to lightcyan was successfully set.
-PASS Setting color to lightgoldenrodyellow was successfully set.
-PASS Setting color to lightgray was successfully set.
-PASS Setting color to lightgreen was successfully set.
-PASS Setting color to lightgrey was successfully set.
-PASS Setting color to lightpink was successfully set.
-PASS Setting color to lightsalmon was successfully set.
-PASS Setting color to lightseagreen was successfully set.
-PASS Setting color to lightskyblue was successfully set.
-PASS Setting color to lightslategray was successfully set.
-PASS Setting color to lightslategrey was successfully set.
-PASS Setting color to lightsteelblue was successfully set.
-PASS Setting color to lightyellow was successfully set.
-PASS Setting color to lime was successfully set.
-PASS Setting color to limegreen was successfully set.
-PASS Setting color to linen was successfully set.
-PASS Setting color to magenta was successfully set.
-PASS Setting color to maroon was successfully set.
-PASS Setting color to mediumaquamarine was successfully set.
-PASS Setting color to mediumblue was successfully set.
-PASS Setting color to mediumorchid was successfully set.
-PASS Setting color to mediumpurple was successfully set.
-PASS Setting color to mediumseagreen was successfully set.
-PASS Setting color to mediumslateblue was successfully set.
-PASS Setting color to mediumspringgreen was successfully set.
-PASS Setting color to mediumturquoise was successfully set.
-PASS Setting color to mediumvioletred was successfully set.
-PASS Setting color to midnightblue was successfully set.
-PASS Setting color to mintcream was successfully set.
-PASS Setting color to mistyrose was successfully set.
-PASS Setting color to moccasin was successfully set.
-PASS Setting color to navajowhite was successfully set.
-PASS Setting color to navy was successfully set.
-PASS Setting color to oldlace was successfully set.
-PASS Setting color to olive was successfully set.
-PASS Setting color to olivedrab was successfully set.
-PASS Setting color to orange was successfully set.
-PASS Setting color to orangered was successfully set.
-PASS Setting color to orchid was successfully set.
-PASS Setting color to palegoldenrod was successfully set.
-PASS Setting color to palegreen was successfully set.
-PASS Setting color to paleturquoise was successfully set.
-PASS Setting color to palevioletred was successfully set.
-PASS Setting color to papayawhip was successfully set.
-PASS Setting color to peachpuff was successfully set.
-PASS Setting color to peru was successfully set.
-PASS Setting color to pink was successfully set.
-PASS Setting color to plum was successfully set.
-PASS Setting color to powderblue was successfully set.
-PASS Setting color to purple was successfully set.
-PASS Setting color to rosybrown was successfully set.
-PASS Setting color to royalblue was successfully set.
-PASS Setting color to saddlebrown was successfully set.
-PASS Setting color to salmon was successfully set.
-PASS Setting color to sandybrown was successfully set.
-PASS Setting color to seagreen was successfully set.
-PASS Setting color to seashell was successfully set.
-PASS Setting color to sienna was successfully set.
-PASS Setting color to silver was successfully set.
-PASS Setting color to skyblue was successfully set.
-PASS Setting color to slateblue was successfully set.
-PASS Setting color to slategray was successfully set.
-PASS Setting color to slategrey was successfully set.
-PASS Setting color to snow was successfully set.
-PASS Setting color to springgreen was successfully set.
-PASS Setting color to steelblue was successfully set.
-PASS Setting color to tan was successfully set.
-PASS Setting color to teal was successfully set.
-PASS Setting color to thistle was successfully set.
-PASS Setting color to tomato was successfully set.
-PASS Setting color to turquoise was successfully set.
-PASS Setting color to violet was successfully set.
-PASS Setting color to wheat was successfully set.
-PASS Setting color to white was successfully set.
-PASS Setting color to whitesmoke was successfully set.
-PASS Setting color to yellow was successfully set.
-PASS Setting color to yellowgreen was successfully set.
-PASS Setting color to #0f0 was successfully set.
-FAIL Setting color to #0f0, #f00 was not set but should!
-PASS Setting color to hsl(120, 100%, 50%) was successfully set.
-PASS Setting color to foobar was not set (as expected).
-PASS Setting color to counter(foobar) was not set (as expected).
-PASS Setting color to url(http://127.0.0.1:8080/) was not set (as expected).
-PASS Setting color to inherited was not set (as expected).
-PASS Setting color to #100% was not set (as expected).
-PASS Setting color to #100px was not set (as expected).
-PASS Setting color to -webkit-var("test") was not set (as expected).
-PASS successfullyParsed is true
-
-TEST COMPLETE
-
